# AvTools

./: README.md
Audio/audio_downsampler/: Readme.md  aud_down_sample.c  aud_down_sample_stream.c  build.sh
Audio/common/: audio_capture_info.h  audio_file_reader.h  audio_framer.h
Audio/silence_detector/: CMakeLists.txt  silence_detect_app.cpp  silence_detector.cpp  silence_detector.h
UtilClasses/: ac_logger.h  data_source.h  ring_buf.cpp  ring_buf.h
Video/field_dump/: build.sh  field_dump.cpp
Video/field_invert/: build.sh  field_invert_rgba.cpp
bash_examples/: bash_exmaples.txt
ffmpeg_commands/: aspect_ratio_commands.txt  ffmbc_commands.txt  ffprobe_commands.txt  useful_ffmpeg_commands.txt  vlc_commands.txt
general_utils/: make_router_using_nat.md
graphics_with_ffmpeg/: graphics_process.md
h265_tile_swap/: README.md  create_black_video_with_tile.cpp  h265_tile_swap.py  parse_h265.py
h265_tile_swap/docs/: h265_tile.md
linux_utils/: linux_utils_commands.txt
virtual_camera_mic/: Readme.md
